role currency
role routes
admin

cars roles
activation of ad
photos to S3
stats
statistics
messages
comments
a peace of swagger
swagger updated
finished swagger
gitignor allow .env
add rout to swagger
auth mailers
