# src/routers/auth.router.ts
@@ -1,8 +1,13 @@
 import { Router } from "express";
 
 import { authController } from "../controllers";
-import { ERoles } from "../enums";
-import { userMiddleware } from "../middlewares";
+import { EActionTokenType, ERoles } from "../enums";
+import {
+  authMiddleware,
+  commonMiddleware,
+  userMiddleware,
+} from "../middlewares";
+import { UserValidator } from "../validators";
 
 const router = Router();
 
@@ -27,6 +32,39 @@ router.post(
   userMiddleware.isValidLogin,
   userMiddleware.getDynamicallyorThrow("email", "body"),
   authController.login
+);
+router.post(
+  "/password/change",
+  commonMiddleware.isBodyValid(UserValidator.changeUserPassword),
+  authMiddleware.checkAccessToken,
+  authController.changePassword
+);
+
+router.post(
+  "/password/forgot",
+  commonMiddleware.isBodyValid(UserValidator.emailValidator),
+  userMiddleware.getDynamicallyOrThrow("email"),
+  authController.forgotPassword
+);
+
+router.put(
+  `/password/forgot/:token`,
+  authMiddleware.checkActionToken(EActionTokenType.forgot),
+  authMiddleware.checkOldPassword,
+  authController.setForgotPassword
+);
+
+router.post(
+  "/activate",
+  commonMiddleware.isBodyValid(UserValidator.emailValidator),
+  userMiddleware.getDynamicallyOrThrow("email"),
+  authController.sendActivateToken
+);
+
+router.put(
+  `/activate/:token`,
+  authMiddleware.checkActionToken(EActionTokenType.activate),
+  authController.activate
 );
 router.post(
   "/refresh",
