# src/utils/swagger.json
@@ -200,6 +200,69 @@
         }
       }
     },
+    "/auth/password/forgot": {
+      "post": {
+        "tags": ["Auth"],
+        "summary": "User can restore forgotten password ",
+        "parameters": [{
+          "name": "body",
+          "in": "body",
+          "required": true,
+          "schema": {
+            "$ref": "#/definitions/Email"
+          }
+        }],
+        "responses": {
+          "200": {
+            "description": "Login successful"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/auth/password/forgot/{ActionToken}": {
+      "put": {
+        "tags": ["Auth"],
+        "summary": "User can set new password ",
+        "parameters": [
+          {
+            "name": "ActionToken",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+          "name": "body",
+          "in": "body",
+          "required": true,
+          "schema": {
+            "$ref": "#/definitions/NewPassword"
+          }
+        }],
+        "responses": {
+          "200": {
+            "description": "Login successful"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/auth/refresh": {
       "post": {
         "tags": ["Auth"],
@@ -210,6 +273,41 @@
           }
         ],
         "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Access token refreshed successfully"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/auth/password/change": {
+      "post": {
+        "tags": ["Auth"],
+        "summary": "User can change password here",
+        "security": [
+          {
+            "AccessToken": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/ChangePassword"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "Access token refreshed successfully"
@@ -555,6 +653,11 @@
       "post": {
         "tags": ["Cars"],
         "summary": "Create a new car",
+        "security": [
+          {
+            "AccessToken": []
+          }
+        ],
         "parameters": [
           {
             "name": "body",
@@ -1310,6 +1413,48 @@
         }
       },
       "required": ["email", "password"]
+    },
+    "Email": {
+      "type": "object",
+      "properties": {
+        "email": {
+          "type": "string",
+          "description": "The email address of the user",
+          "pattern": "^[^\\s@]+@([^\\s@.,]+\\.)+[^\\s@.,]{2,}$",
+          "example": "dima@gmail.com"
+        }
+      },
+      "required": ["email"]
+    },
+    "NewPassword": {
+      "type": "object",
+      "properties": {
+        "newPassword": {
+          "type": "string",
+          "description": "New password",
+          "pattern": "^(?=.*[A-Za-z])(?=.*\\d)(?=.*[@$!%_*#?&])[A-Za-z\\d@$_!%*#?&]{8,}$",
+          "example": "Ab12345!"
+        }
+      },
+      "required": ["newPassword"]
+    },
+    "ChangePassword": {
+      "type": "object",
+      "properties": {
+        "newPassword": {
+          "type": "string",
+          "description": "New password",
+          "pattern": "^(?=.*[A-Za-z])(?=.*\\d)(?=.*[@$!%_*#?&])[A-Za-z\\d@$_!%*#?&]{8,}$",
+          "example": "Ab12345!"
+        },
+        "oldPassword": {
+          "type": "string",
+          "pattern": "^(?=.*[A-Za-z])(?=.*\\d)(?=.*[@$!%_*#?&])[A-Za-z\\d@$_!%*#?&]{8,}$",
+          "description": "The old password",
+          "example": "Fb12345!"
+        }
+      },
+      "required": ["newPassword", "oldPassword"]
     },
     "UserCreateByAdmin": {
       "type": "object",
