# src/validators/user.validator.ts
@@ -50,4 +50,12 @@ export class UserValidator {
     email: this.email.required(),
     password: this.password.required(),
   });
+  static emailValidator = Joi.object({
+    email: this.email.required(),
+  });
+
+  static changeUserPassword = Joi.object({
+    oldPassword: this.password.required(),
+    newPassword: this.password.required(),
+  });
 }
